Estilos base para index

--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 ---
 layout: default
 ---
+<section id="portada">
+	<h1>Siempre ahí por tu <span>bienestar</span></h1>
+	<h2>Preparados para ayudarte a dar el siguiente paso</h2>
+</section>
+<section id="resumen">
+	<ul>
+		<li>Un equipo multidisciplinar</li>
+		<li>Profesionales de nuestro sector</li>
+		<li>Expertos en múltiples ámbitos</li>
+	</ul>
+</section>
