--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 ---
 layout: default
 ---
-<section id="portada">
-	<h1>Siempre ahí por tu <span>bienestar</span></h1>
-	<h2>Preparados para ayudarte a dar el siguiente paso</h2>
+<section id="cover">
+	<h1>Atención psicológica a la <span class="default">infancia</span><span>adolescencia</span><span>pareja</span><span>familia</span></h1>
+	<h2>Un nuevo enfoque psicoterapéutico y educativo!</h2>
 </section>
-<section id="resumen">
+<section id="abstract">
 	<ul>
-		<li>Un equipo multidisciplinar</li>
-		<li>Profesionales de nuestro sector</li>
-		<li>Expertos en múltiples ámbitos</li>
+		<li>Un equipo disciplinar e integrador</li>
+		<li>Profesionales con amplios conocimientos y experiencias</li>
+		<li>Expertos en entornos familiares y escolares</li>
 	</ul>
+</section>
+<section id="index-content">
+	<div>
+		<h2>UN EQUIPO CREADO PARA TI</h2>
+		<p>
+			Somos un equipo de psicólogos, psicoterapeutas, psicólogos educativos y de recursos humanos y otros profesionales afines. Nuestro objetivo es la <b>atención y tratamiento</b> psicológico a la <b>infancia, adolescencia, pareja y familia</b> ante cualquier tipo de demandas o cuestiones de índole psicológica y/o educativa que se producen en el entorno familiar o escolar.
+		</p>
+	</div>
+	<div>
+		<h3>Juntos es mejor!</h3>
+		<p>
+			Entendemos la importancia de un <b>tratamiento eficaz</b>, por eso hemos unido nuestras experiencias, conocimientos y capacidades  (amplias, diversas y heterogéneas), para lograr el mejor tratamiento posible mediante la <b>implicación del equipo completo en cada caso concreto</b>.
+		</p>
+	</div>
+	<div>
+		<h2>COOPERAMOS PARA MEJORAR</h2>
+		<p>
+			PsicoNueve se formó en el año 2015 por un equipo inicial de nueve profesionales, todos psicólogos en ejercicio profesional, <b>interesados en el mundo infantil y familiar</b>, preocupados por el incremento de conflictos y problemas psicológicos y educativos que se dan alrededor de la familia, los padres, la pareja, los adolescentes, los niños, el embarazo, la fertilidad y la crianza. Por nuestra amplia experiencia profesional y vital, hemos sido espectadores privilegiados de los mismos, <b>sumando</b> en este proyecto <b>nuestras experiencias</b>, conocimientos y formas diferentes de enfocar las soluciones para ofrecer una <b>ayuda efectiva y completa</b>.
+		</p>
+	</div>
+	<div>
+		<h2>PROCESOS PSICOCOOPERATIVOS</h2>
+		<p>
+			En el entorno de los tratamientos personalizados e individualizados, en PsicoNueve hemos desarrollado y utilizamos lo que denominamos <b>terapias psicocooperativas</b>, en las que un <b>equipo</b> de psicoterapeutas cooperan estrechamente en el tratamiento de los conflictos de nuestros clientes. Usamos un <b>modelo Dos/Nueve</b> (dos co- psicólogos y nueve co-supervisores) que <b>garantiza mayor eficacia</b> en los tratamientos, además de su <b>continuidad y no interrupción</b> por el grupo de profesionales que componen nuestro equipo.
+		</p>
+		<p>
+			En el <b>entorno grupal</b> y en sus diferentes facetas: preventiva, curativa, mejorativa, educativa o simplemente informativa, también desarrollamos de manera <b>igualmente cooperativa</b> todos los cursos, talleres, conferencias, terapia grupal, apoyo escolar, detección grupal de trastornos específicos, etc., sumando la diferente y amplia experiencia que en los temas anteriores tienen acumulada individualmente los profesionales que formamos el equipo de <b>PsicoNueve</b>. 
+		</p>
+	</div>
 </section>
