--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <section id="cover">
-	<h1 class="title">Atención psicológica a la <span><b class="default">infancia</b><b>adolescencia</b><b>pareja</b><b>familia</b></span></h1>
+	<h1 class="title">Atención psicológica a la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
 	<h2 class="subtitle">Un nuevo enfoque psicoterapéutico y educativo!</h2>
 </section>
 <section id="abstract">
