Script para calcular parallax

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<section id="cover">
+<section id="cover" class="parallax" data-x="right">
 	<h1 class="title">Atención psicológica a la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
 	<h2 class="subtitle">Un nuevo enfoque psicoterapéutico y educativo!</h2>
 </section>
@@ -28,7 +28,7 @@ layout: default
 			</p>
 		</div>
 	</div>
-	<div class="content">
+	<div class="content parallax" data-x="center">
 		<div class="wrapper">
 			<h2 class="title">COOPERAMOS PARA MEJORAR</h2>
 			<p>
