--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 nav: 1
 title: Inicio
 ---
-<section id="cover" class="jarallax">
+<section id="index-cover" class="jarallax">
 	<h1 class="title">Atención psicológica a la&nbsp;<span id="dinamic-end"><b class="visible">infancia</b><b class="hidden">adolescencia</b><b class="hidden">pareja</b><b class="hidden">familia</b></span></h1>
 	<h2 class="subtitle">Un nuevo enfoque psicoterapéutico y educativo!</h2>
 </section>
