Primeros estilos para nav04

--- a/areas_intervencion.html
+++ b/areas_intervencion.html
@@ -40,7 +40,7 @@ subtitle: La familia, un todo dinámico
 	</section>
 	<section class="card">
 		<div class="text-wrapper">
-			<div class="content exception">
+			<div class="content excp">
 				<h2 class="title">La difícil relación de pareja</h2>
 				<p>
 					Se forma una pareja, dos adolescentes o ya individuos “formados” deciden unir sus vidas, ¿para siempre?, ¿saben lo que hacen?. Empiezan una vida en común. Cada uno de ellos ha vivido un pasado diferente, unos valores, unas creencias, unos hábitos diferentes y cada uno de ellos tiene expectativas de su futuro también distintas, pero deciden unirse y construir juntosdeciden unirse y construir juntos un “nosotros”. A lo largo de su vida en común surgirán conflictos, unos originados por el entorno, otros por ellos mismos. ¿Sabrán resolverlos?.
