Estilos finales para nav04

--- a/metodologia.html
+++ b/metodologia.html
@@ -5,7 +5,7 @@ subtitle: Más que un centro de psicología
 ---
 <section id="metodologias">
 	<section>
-		<div class="text-wrapper excp">
+		<div class="text-wrapper">
 			<h2 class="title">Tratamientos personalizados</h2>
 			<p>
 				En el entorno de los tratamientos personalizados, cada caso individual se suele iniciar con un primer breve contacto (personal, telefónico, email...) de un miembro de nuestro equipo con alguna parte interesada (adolescente, padre, profesor, tutor, pareja, familiar...) y conocedora total o parcialmente de la demanda de atención o apoyo que nuestro equipo puede ayudar a resolver o mejorar. A partir de dicho contacto, y con la breve información disponible, se acuerda la primera cita previa del interesado (o interesados) con el Psicólogo Coordinador de PsicoNueve, acompañado de un segundo psicólogo, psicoterapeuta y/o educativo que se considere más adecuado, según la breve información disponible. En dicha cita (gratuita) se confirma y profundiza en la problemática y demanda planteada y se decide:
@@ -25,7 +25,7 @@ subtitle: Más que un centro de psicología
 		</div>
 	</section>
 	<section>
-		<div class="text-wrapper excp">
+		<div class="text-wrapper">
 			<h2 class="title">Entorno grupal</h2>
 			<p>
 				En el entorno grupal y en sus diferentes facetas: preventiva, curativa, mejorativa, educativa o informativa, evitamos el uso de clases magistrales realizadas por un único experto, buscando otros modelos más atrayentes. En nuestros cursos, conferencias, talleres, evaluaciones grupales o grupos terapéuticos y/o educativos potenciamos la interacción activa de los participantes con varias estrategias, basadas en modelos más efectivos y sugerentes, incluyendo además nuestra filosofía psicocooperativa que empleamos siempre en los entornos personalizados e individuales. Estos modelos, que tienen la virtud de mantener la atención de los asistentes en un nivel motivacional alto, se resumen en los siguientes ejemplos:
