Estilos para nav05

--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -3,3 +3,66 @@ nav: 5
 title: Quiénes Somos
 subtitle: Nuestro equipo fundador
 ---
+<section class="intro">
+	<p>
+		El equipo fundador de PsicoNueve está formado por nueve psicólogos, todos en activo, colegiados en el Colegio Oficial de Psicólogos de Madrid y habilitados como psicólogos sanitarios para ejercer en todo el Territorio Nacional. Todos ellos forman asimismo el equipo de supervisión que coopera en los tratamientos y supervisa los resultados en el entorno de los tratamientos personalizados, como explicamos en nuestra metodología, y que mantenemos como parte de nuestra filosofía principal, la psicocooperación con el modelo Dos/Nueve indicado. La formación y experiencia es muy heterogénea entre ellos, lo que da una mayor eficacia a nuestro modelo, y todos ellos tienen la suficiente formación, experiencia y capacidad para ser eficaces en su trabajo.
+	</p>
+</section>
+<section id="equipo-fundador">
+	<ul>
+		<li>
+			<h2 class="title">Andrea Martínez Fernández</h2>
+			<p>
+				<span>Colegiada M- 28412.</span> Licenciada en Psicología por la Universidad de Deusto. Máster en Psicología Clínica y de la Salud por la Universidad Complutense de Madrid. Experiencia principalmente en terapia individual con niños y adolescentes (problemas de conducta, manejo de ansiedad, gestión de emociones, dificultades de relación, ...), talleres de habilidades sociales y resolución de conflictos entre niños y atención a mujeres en servicios sociales. Orientación cognitivo-conductual de última generación.
+			</p>
+		</li>
+		<li>
+			<h2 class="title">Cristina García Navarro</h2>
+			<p>
+				<span>Colegiada M-24856.</span> Licenciada en Psicología por la Universidad Jaime I de Castellón. Máster en Psicopatología, Salud y Neuropsicología por la misma Universidad. Experta en Psicoterapia de Niños y Adolescentes por el Colegio Oficial de Psicólogos de Madrid y la AEFDP. Dentro del Hospital Universitario Doce de Octubre, participante en numerosos proyectos de investigación, principalmente en neuropsicología clínica en pacientes pediátricos, con varias publicaciones, ponencias y comunicaciones en diferentes congresos internacionales. Experiencia principalmente en la evaluación, el tratamiento, desarrollo y atención de pacientes pediátricos. Orientación más cercana al entorno psiquiátrico, médico y neurológico.
+			</p>
+		</li>
+		<li>
+			<h2 class="title">Froilán Rincón de Matos</h2>
+			<p>
+				<span>Colegiado M-27107.</span> Licenciado en Psicología por la Universidad Nacional de Educación a Distancia (UNED). Experto en Psicoterapia de Niños y Adolescentes por el Colegio Oficial de Psicólogos de Madrid y la AEFDP. Formación en Ingeniería Aeronáutica, Informática, Empresariales y RRHH. Experiencia principal en gestión, selección y políticas  de personal, entorno laboral, entorno escolar, niños, adolescentes y conciliación de la vida familiar y profesional. Orientación cognitiva-constructivista, sistémica, humanista y psicodramática.
+			</p>
+		</li>
+		<li>
+			<h2 class="title">Gema López Martínez</h2>
+			<p>
+				<span>Colegiada M-25850.</span> Licenciada en Psicología por la Universidad de Murcia. Máster en  psicología de la Salud y Práctica Clínica por la Universidad Pontificia de Comillas, Madrid. Experta en Psicoterapia de Parejas por el Colegio Oficial de Psicólogos de Madrid y Especialista en Psicoterapia de Niños y Adolescentes por la Escuela de Psicoterapia y Psicodrama de Madrid. Especialista en Mediación Familiar por la Universidadde Castilla La Mancha. Experiencia principalmente en terapia de parejas, niños, adolescentes y familias, en la inserción familiar y sociolaboral del enfermo mental crónico y en la impartición de cursos y programas formativos. Orientación integradora sistémica, psicodinámica, cognitiva-conductual y humanista.
+			</p>
+		</li>
+		<li>
+			<h2 class="title">Isabel Aboy Ferrer</h2>
+			<p>
+				<span>Colegiada M-19931.</span> Licenciada en Psicología por la Universidad Complutense de Madrid. En la misma universidad, Curso de Investigación (cognición, emoción y estrés), y Diplomada en Terapia de Pareja, Sexología y Sistema Familiar. Máster en Dirección y Gestión de RRHH. Experiencia principal en Acoso Escolar, riesgos de las Nuevas Tecnologías en menores y Trastornos de la Conducta Alimentaria. Durante siete años, psicóloga clínica del primer centro de Seguridad en Internet para la Protección de la Infancia en España, auspiciado por el Ministerio de Industria y dependiente del Safer Internet Programme de la Comisión Europea. Orientación cognitivo-conductual y sistémica.
+			</p>
+		</li>
+		<li>
+			<h2 class="title">Josefina González Calvo</h2>
+			<p>
+				<span>Colegiada M-27222.</span> Licenciada en Psicología por la Universidad Nacional de Educación a Distancia (UNED). Formación completa en Construcción de la Biografía Humana de Laura Gutman de Buenos Aires y formación en Psicología del embarazo, puerperio e infancia temprana y Psicología de la Salud. Trabaja en el ámbito de la familia, pareja, embarazo y primeros años de vida de los niños, tanto a nivel individual como grupal. Creadora de la web www.mihijocomebien.es sobre hábitos de alimentación desde los seis meses de vida.
+			</p>
+		</li>
+		<li>
+			<h2 class="title">María Rodríguez Manzarbeitia</h2>
+			<p>
+				<span>Colegiada M-31192.</span> Título Universitario de Grado de Psicología por la Universidad Pontificia de Comillas, Madrid. Máster en Psicología General Sanitaria y Máster en Terapia Cognitivo-Conductual con Niños y Adolescentes, ambos por la misma universidad. Máster en Psicomotricidad por Psicopraxis.  Experiencia principalmente en terapia individual con niños y adolescentescentes y en psicomotricidad, trabajo psicomotriz con el niño,  muy importante para potenciar su neurodesarrollo. Orientación cognitivo-conductual de última generación, humanista, psicodinámica y sistémica.
+			</p>
+		</li>
+		<li>
+			<h2 class="title">María Cecilia Machicado Villamizar</h2>
+			<p>
+				<span>Colegiada  M-27203.</span> Licenciada en Psicología por la Pontificia Universidad Javeriana de Bogotá Colombia. Máster en Psicoterapia Psicoanalítica por la Universidad Complutense de Madrid. Formación específica en el Institute for Neuro-Physiological Psychology en Chester, UK. y también formada en la Construcción de la Biografiá Humana de Laura Gutman de Buenos Aires. Experiencia principalmente en el abordaje de mujeres, embarazadas, madres y padres, enfatizando en los procesos psicológicos involucrados en la maternidad y la crianza. También en el trabajo psicomotriz con el niño,  y en metodologías de reorganización neuronal, punteras en el abordaje de las diferentes dificultades del aprendizaje, emocionales y sociales del niño y adolescente. Orientación psicoanalítica, apoyada por otros enfoques.
+			</p>
+		</li>
+		<li>
+			<h2 class="title">Patricia Ballestrino Fumera</h2>
+			<p>
+				<span>Colegiada M-26095.</span> Licenciada en Psicología por la Universidad Nacional de Educación a Distancia (UNED). Colaborador investigador en el proyecto Funcionamiento Ejecutivo, Desarrollo Cognitivo y Aprendizaje Escolar de la UNED. Especialista en Psicoterapia y Psicodrama por la Escuela de Psicoterapia y Psicodrama de Madrid. Experta en Psicoterapia de Niños y Adolescentes por el Colegio Oficial de Psicólogos de Madrid y la AEFDP. Especialista en Psicoterapia Psicoanalista Lacaniana por la Escuela de Psicoanalistas de Madrid. Experiencia principalmente en terapia individual infanto-juvenil y adultos. Orientación psicodinámica, psicoanálisis y psicodrama.
+			</p>
+		</li>
+	</ul>
+</section>
