Estilos para nav06

--- a/nuestra_filosofia.html
+++ b/nuestra_filosofia.html
@@ -3,7 +3,7 @@ nav: 2
 title: Nuestra Filosofía
 subtitle: Los nueve principios que nos determinan
 ---
-<ul id="principios">
+<ul id="principios" class="zigzag">
 	<li>
 		<div class="text-wrapper">
 			<div class="content">
