--- a/servicios.html
+++ b/servicios.html
@@ -3,3 +3,107 @@ nav: 6
 title: Servicios Personalizados
 subtitle: Una amplia gama de servicios para tus necesidades
 ---
+<section class="intro">
+	<p>
+		Dentro de nuestras áreas de Intervención -infancia, adolescencia, pareja y familia- ofrecemos una amplia gama de servicios que cubren todo el espectro de necesidades de atención psicológica y psicoeducativa que el entorno familiar puede precisar a lo largo de su ciclo vital, desde la maternidad y la crianza del recién nacido, su evolución dentro de la familia, su vida como adolescente, la formación y vida de una pareja, hasta la vida familiar completa, sin olvidar su relación con el entorno, sobre todo el entorno escolar y las relaciones con compañeros.
+	</p>
+</section>
+<section id="area-servicios">
+	<section class="card reverse">
+		<div class="text-wrapper">
+			<div class="content">
+				<h2 class="title">Escuelas infantiles</h2>
+				<p>
+					En las escuelas infantiles desarrollamos charlas y talleres teórico-prácticos dirigidos tanto al personal del centro como a los padres y madres de los niños y niñas del mismo, de acuerdo a las demandas, necesidades y propuestas específicas de la escuela infantil, así como de nuestro conocimiento y experiencias en ellas. De este modo, abordamos temas como Inteligencia Emocional, Disciplina Positiva, Manejo de las rabietas, Comunicación Empática con los niños, Desarrollo Infantil, Transtornos Generales del Desarrollo, Sueño Infantil, Pautas Alimenticias en la pequeña infancia, Relaciones entre hermanos, La importancia del Apego Seguro, entre otras. Somos conocedores de la Escuela Nueva y de la Pedagogía Activa: Montessori, Waldorf, Wild, Pestalozzi, etc., y contribuimos a enriquecer la Educación Infantil desde diferentes perspectivas.
+				</p>
+			</div>
+		</div>
+	</section>
+	<section class="card reverse">
+		<div class="text-wrapper">
+			<div class="content">
+				<h2 class="title">Colegios e institutos</h2>
+				<p>
+					En los colegios e institutos realizamos diferentes intervenciones grupales de tipo psicológico y/o psicoeducativo, a nivel de centro, de curso, de aula, o por otros criterios conductuales o educativos, tales como evaluaciones psicológicas, formativas, comportamentales, relacionales o cognitivas. Por ejemplo, nuestro sistema de Análisis de Detección y Propuestas de Intervención del Acoso Escolar en el Centro Educativo logra una detección temprana del problema e impone medidas correctoras antes de que su repercusión sea dramática. Además, en base a las demandas, necesidades y propuestas del centro, desarrollamos diferentes charlas y talleres dirigidos a los alumnos del centro, además de al personal docente y padres.
+				</p>
+			</div>
+		</div>
+	</section>
+	<section class="card reverse">
+		<div class="text-wrapper">
+			<div class="content excp">
+				<h2 class="title">Empresas</h2>
+				<p>
+					En las empresas y para sus empleados, PsicoNueve desarrolla charlas y talleres prácticos en base a las propuestas de la compañía, con un beneficio implícito para la propia empresa, ya que en definitiva sus empleados, fuera de la misma, también son padres, son madres, forman parejas y familias, y pueden tener situaciones y conflictos profesionales que luego trasladan a sus familias o a la inversa. Talleres generales sobre entrenamiento en inteligencia emocional, asertividad, habilidades sociales, resolución de problemas y autoestima, o específicos sobre situaciones que pueden darse en las empresas como el mobbing, el burn out o el estrés laboral, o sobre las situaciones familiares que pueden producir beneficios importantes para la propia empresa al mejorar el estado anímico de sus empleados y, en definitiva, el clima laboral.
+				</p>
+			</div>
+		</div>
+	</section>
+</section>
+<section id="lista-servicios">
+	<section class="intro">
+		<p>
+			LAS EVALUACIONES DIAGNÓSTICAS Y/O EDUCATIVAS permiten comprender con la profundidad suficiente el problema, conflicto, requerimiento o necesidades del usuario de nuestros servicios. En el caso de adultos se utilizan diferentes técnicas, como entrevistas libres, estructuradas o semiestructuradas,diferentes técnicas, como entrevistas libres, estructuradas o semiestructuradas, aplicaciones de test específicos, etc.
+		</p>
+		<p>
+			En el caso de niños o adolescentes, la evaluación comprende un profundo análisis de la información aportada por los padres, así como la valoración individual del sujeto, usando técnicas delos padres, así como la valoración individual del sujeto, usando técnicas de evaluación que tienen en cuenta y superan las limitaciones que, por la cortaevaluación que tienen en cuenta y superan las limitaciones que, por la corta edad o la resistencia a aceptar ayuda, tienen algunos niños y adolescentes.
+		</p>
+	</section>
+	<ul class="zigzag iconbkg">
+		<li>
+			<div class="text-wrapper">
+				<div class="content">
+					<h2 class="title">Procesos Psicoterapéuticos</h2>
+					<p>
+						Los Procesos Psicoterapéuticos y/o Educativos constituyen nuestro principal Servicio individualizado y personalizado que iniciamos una vez que se ha comprobado que la demanda y las necesidades específicas requeridas por el usuario precisan de un conjunto de sesiones terapéuticas y/o educativas, y se ha asignado al equipo dual de profesionales que mejor responde a dichas necesidades (niño, adolescente, pareja o familia). En la mayoría de los casos, el número de sesiones totales para un tratamiento eficaz se encuentra comprendido entre 9 y 27 sesiones, en el transcurso de dos a nueve meses, siendo muy escasos los tratamientos que superan las anteriores cifras. Dentro de las tres primeras sesiones, y luego periódicamente, el equipo terapéutico de PsicoNueve informa de la duración estimada del tratamiento. En general, la frecuencia más adecuada es la de una sesión semanal o quincenal, aunque en ocasiones y de manera circunstancial, se pueden establecer otras frecuencias.
+					</p>
+				</div>
+			</div>
+		</li>
+		<li>
+			<div class="text-wrapper">
+				<div class="content">
+					<h2 class="title">Sesiones de psicomotricidad</h2>
+					<p>
+						Las sesiones de psicomotricidad con bebés, niños y preadolescentes,  muy importantes para potenciar su neurodesarrollo, tanto en los aspectos de evaluación como de intervención, consiguen un impacto en el abordaje de las diferentes dificultades de aprendizaje, emocionales y sociales del niño y del adolescente.
+					</p>
+				</div>
+			</div>
+		</li>
+		<li>
+			<div class="text-wrapper">
+				<div class="content">
+					<h2 class="title">Sesiones de ayuda pedagógica</h2>
+					<p>
+						En las sesiones de ayuda pedagógica, desarrollamos metodologías específicas de  aprendizaje significativo, cognitivo, afectivo, emocional y motivacional, incluyendo hábitos y técnicas de estudios personalizadas, según el contenido específico a aprender; el entorno escolar, familiar y social en que el niño o adolescente se encuentra inmerso; la personalidad del mismo y sus conocimientos previos.
+					</p>
+				</div>
+			</div>
+		</li>
+		<li>
+			<div class="text-wrapper">
+				<div class="content">
+					<h2 class="title">Mediación familiar</h2>
+					<p>
+						La orientación, asesoramiento y mediación familiar tiene como objetivo prioritario conseguir el bienestar integral de la familia mediante la orientación y el asesoramiento en las situaciones familiares que superan a sus componentes, creando tensiones disgregadoras. Igualmente, mediante la mediación familiar tratamos de resolver los posibles conflictos que surgen en el entorno familiar a través del consenso, la equidad, la negociación y el diálogo entre las partes, ayudado por una persona mediadora e imparcial experta.
+					</p>
+				</div>
+			</div>
+		</li>
+		<li>
+			<div class="text-wrapper">
+				<div class="content">
+					<h2 class="title">Talleres grupales</h2>
+					<p>
+						Los Talleres Grupales Psicoterapéuticos y/o Educativos, engloban a varios usuarios de cualquiera de nuestros servicios, con problemáticas similares o complementarias, en un entorno grupal que permite amplificar las resultados de las terapias individuales, aportando otros niveles de actuaciones y compromisos que logran los entornos grupales.
+					</p>
+				</div>
+			</div>
+		</li>
+	</ul>
+	<section class="info excp">
+		<p>
+			En PsicoNueve tenemos la opción de poder dar algunos de nuetros servicios en inglés o italiano, y en el lenguaje de signos en español. También es posible realizar algunos servicios a través del teléfono o skype, e incluso a domicilio.
+		</p>
+	</section>
+</section>
